fixed some things

--- a/test/eks_to_xml/index.html
+++ b/test/eks_to_xml/index.html
@@ -15,4 +15,4 @@
 	
 	@section DESCRIPTION
 	
-	This example is a html file, but written in eks.--><!DOCTYPE HTML><HTML><HEAD /><BODY><h1>Hello world!</h1><p>This is really <i>cool!</i></p><p>A new <b>paragraph</b></p><!--Eks instead of html, isnt that sweet?--><h2>A new header</h2><p>More text ...</p><p>you can use the eks numbers:<b>255</b></p><table><tr><td>type</td><td>prices</td><td>coolness</td></tr><tr><td>banana</td><td>very cheap</td><td>not that cool</td></tr><tr><td>apple</td><td>expensive</td><td>very <b>cool!</b></td></tr></table></BODY></HTML>
+	This example is a html file, but written in eks.--><!DOCTYPE HTML><HTML><HEAD /><BODY><h1>Hello world!</h1><p>This is really <i>cool!</i></p><p>A new <b>paragraph</b></p><!--Eks instead of html, isnt that sweet?--><h2>A new header</h2><p>More text ...<br />even more text</p><p>255</p><table><tr><td>a1</td><td>a2</td></tr><tr><td>a3</td><td>a4</td></tr></table></BODY></HTML>
